release router v1.0.5